--- a/src/main/resources/templates/orderHistory.html
+++ b/src/main/resources/templates/orderHistory.html
@@ -56,7 +56,7 @@
 
 <div id="live-tracking-popup">
         <span id="close-popup">X</span>
-        <div id="map"></div>
+        <div id="addressMapTrack"></div>
         <p id="eta"><strong>Estimated Time of Arrival (ETA):</strong> Calculating...</p>
     </div>
 <div th:replace="footer :: body"></div>
